fix(guides, css): iframes were causing overflows

--- a/src/assets/styles/markdown.scss
+++ b/src/assets/styles/markdown.scss
@@ -1,4 +1,10 @@
 .markdown-content {
+  iframe {
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 16 / 9;
+  }
+
   iframe + iframe {
     margin-top: theme("spacing.4");
   }
